--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.3",
   "description": "lucendi - Line of sight",
   "main": "build/main/index.js",
-  "typings": "build/main/index.d.ts",
+  "typings": "src/types/index.d.ts",
   "module": "build/module/index.js",
   "repository": "https://github.com/praghus/lucendi",
   "license": "MIT",
