--- a/package.json
+++ b/package.json
@@ -47,9 +47,7 @@
   "engines": {
     "node": ">=8.9"
   },
-  "dependencies": {
-    "sha.js": "^2.4.11"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@bitjson/npm-scripts-info": "^1.0.0",
     "@bitjson/typedoc": "^0.15.0-0",
